@@ -81,7 +81,7 @@ let list_loc prog =
     | Exchange(l,e,_) -> loc (expr s e) l
     | Fetch(l,_,e,_) -> loc (expr s e) l
     | ECall (_,es) -> List.fold_left expr s es
-    | AtomicAddUnless(e1,e2,e3)
+    | AtomicAddUnless(e1,e2,e3,_)
     | CmpExchange (e1,e2,e3,_)
     | ECas (e1,e2,e3,_,_,_) -> expr (expr (expr s e1) e2) e3
     | TryLock (e,_) -> expr s e
