@@ -93,6 +93,7 @@ let tr_name s = match s with
 | "__atomic_op" -> UNDERATOMICOP
 | "__atomic_op_return" -> UNDERATOMICOPRETURN
 | "__atomic_add_unless" -> UNDERATOMICADDUNLESS
+| "atomic_add_unless" -> ATOMICADDUNLESS
 (* Others *)
 | x -> IDENTIFIER x
 }
