@@ -54,7 +54,7 @@ open MemOrderOrAnnot
 %token <MemOrder.t> MEMORDER
 %token LD LD_EXPLICIT ST ST_EXPLICIT EXC EXC_EXPLICIT FENCE LOCK UNLOCK SPINLOCK SPINUNLOCK SPINTRYLOCK SCAS WCAS SCAS_EXPLICIT WCAS_EXPLICIT
 %token LOAD STORE UNDERFENCE XCHG CMPXCHG
-%token   UNDERATOMICOP  UNDERATOMICOPRETURN UNDERATOMICADDUNLESS
+%token   UNDERATOMICOP  UNDERATOMICOPRETURN UNDERATOMICADDUNLESS ATOMICADDUNLESS
 %token <Op.op> ATOMIC_FETCH
 %token <Op.op> ATOMIC_FETCH_EXPLICIT
 
@@ -198,7 +198,9 @@ expr:
 | UNDERATOMICOPRETURN LPAR expr COMMA atomic_op COMMA expr RPAR
   { AtomicOpReturn($3,$5,$7) }
 | UNDERATOMICADDUNLESS LPAR expr COMMA expr COMMA expr RPAR
-  { AtomicAddUnless($3,$5,$7) }
+  { AtomicAddUnless($3,$5,$7,false) }
+| ATOMICADDUNLESS LPAR expr COMMA expr COMMA expr RPAR
+  { AtomicAddUnless($3,$5,$7,true) }
 
 args:
 | { [] }
