@@ -1,3 +1,4 @@
+  * herd/linux: serious semantical work on compare exchange and add_unless
   * herd/linux: failed fenced atomics do not generate fence events.
   * herd: uniform handling of indivudual events and relational pairs.
   * litmus: accept void * in argument types.
